@@ -11,4 +11,4 @@ COPY  build/libs/app.jar app.jar
 EXPOSE 8080
 
 # Run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--add-opens=java.base/java.time=ALL-UNNAMED","-jar", "app.jar"]
